[project]
name = "financial-dashboard"
version = "0.1.0"
description = "Streamlit 金融数据分析仪表盘"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jiduhang", email = "2954977080@qq.com"}
]

# ---------- 运行时依赖 ----------
dependencies = [
    "streamlit>=1.38",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.20",
    "yfinance>=0.2.40",
    "alpha_vantage>=2.4.1",
    "ta>=0.11.0",                # 技术指标库
    "python-dotenv>=1.0",        # .env 文件读取（API KEY）
]

# ---------- 开发/测试依赖 ----------
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",                # 静态代码检查 + 自动格式化
]

# ---------- 可执行脚本 ----------
[project.scripts]
financial-dashboard = "src.app:main"   # `uv run financial-dashboard` 启动

# ---------- 打包/编译 ----------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
